bugfix for overflowing initiative trackers

--- a/src/components/CharacterMarkers/CharacterMarkers.css
+++ b/src/components/CharacterMarkers/CharacterMarkers.css
@@ -29,8 +29,14 @@
     grid-area: 2 / 1 / 3 / 3;
     height: 100%;
     overflow: auto;
+    scrollbar-gutter: stable horizontal;
     background-color: var(--parchment);
-    touch-action: none;
+    touch-action: none;  
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
 }
 
 .init-content > *:last-child {
