--- a/src/components/CharacterMarkers/components/InitSlot/components/CreateSlot.css
+++ b/src/components/CharacterMarkers/components/InitSlot/components/CreateSlot.css
@@ -27,13 +27,13 @@
     height: 4rem;
     width: 100%;
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 2fr 0 1fr;
     align-items: center;
     background-color: var(--crimson);
-    grid-area: 1 / 1 / 1 / 3;
+    grid-area: 1 / 1 / 1 / 4;
 }
 .create-slot > .button {
-    grid-area: 1 / 2 / 1 / 3;
+    grid-area: 1 / 3 / 1 / 4;
     padding: .5rem;
     width: 100%;
     height: 100%;
